tests/ide_unmerged_deps/ide_unmerged_deps.exp

Trigger a slow recheck: DONE

Sleep: DONE

Get-def with unchecked dependency:
{"path":"dependency.js","line":3,"endline":3,"start":14,"end":14}

Did it finish in less than 5 seconds? YES

Original recheck finished:
Error -------------------------------------------------------------------------------------------- slow_dependent.js:5:2

Cannot cast `x` to number because string [1] is incompatible with number [2]. [incompatible-type]

   slow_dependent.js:5:2
   5| (x: number); // error
       ^

References:
   dependency.js:3:18
   3| export const x = "x";
                       ^^^ [1]
   slow_dependent.js:5:5
   5| (x: number); // error
          ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- slow_dependent.js:7:1

Cannot resolve name `$Flow$DebugSleep$DO_NOT_USE_IN_PRODUCTION_CODE_OR_YOU_WILL_BE_FIRED`. [cannot-resolve-name]

   7| $Flow$DebugSleep$DO_NOT_USE_IN_PRODUCTION_CODE_OR_YOU_WILL_BE_FIRED(10);
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^



Found 2 errors

The Flow server is currently in lazy mode and is only checking 3/4 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes
